Laporan Praktikum "Linear Regression"

--- a/Praktikum1/LinearRegression.ipynb
+++ b/Praktikum1/LinearRegression.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP1bIWPt+x9CBIXC0z3Crta",
+      "authorship_tag": "ABX9TyN2uzJE4PEu8iTQZzoAWYt2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,12 +23,12 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/laraagasii/laraagasii-DIF62130_B_24-25_2311531002_HanifahLaramaAgasi/blob/main/Praktikum1/LinearRegression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/laraagasii/DIF62130_B_24-25_2311531002_HanifahLaramaAgasi/blob/main/Praktikum1/LinearRegression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "yvGgS2orUAkt"
       },
@@ -45,6 +45,22 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "1. pandas, numpy → Manipulasi dan analisis data.\n",
+        "2. matplotlib.pyplot → Visualisasi data.\n",
+        "3. MinMaxScaler → Normalisasi fitur agar dalam rentang tertentu.\n",
+        "4. PolynomialFeatures → Membuat fitur polinomial untuk regresi non-linear.\n",
+        "5. train_test_split → Membagi data menjadi training & testing.\n",
+        "6. LinearRegression → Model regresi linier untuk prediksi.\n",
+        "7. mean_squared_error → Mengukur kesalahan prediksi (MSE).\n",
+        "8. fetch_california_housing → Dataset harga rumah di California untuk analisis regresi."
+      ],
+      "metadata": {
+        "id": "iyLNMngvPPv8"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "from sklearn.datasets import fetch_california_housing\n",
@@ -52,9 +68,9 @@
         "df = pd.DataFrame(housing.data, columns=housing.feature_names)\n",
         "df['MedHouseValue'] = pd.Series(housing.target)\n",
         "\n",
-        "targets = df['MedHouseValue']\n",
-        "inputs = df.drop(['MedHouseValue'], axis=1)\n",
-        "df.head()"
+        "targets = df['MedHouseValue']                       #Dependent Variable\n",
+        "inputs = df.drop(['MedHouseValue'], axis=1)         #Independent Variable\n",
+        "df.head()                                           #Menampilkan 5 data teratas"
       ],
       "metadata": {
         "colab": {
@@ -64,7 +80,7 @@
         "id": "wN27ophCVjFc",
         "outputId": "41b476be-2bed-4deb-8120-605d8c0ea5c4"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -402,6 +418,20 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "1. fetch_california_housing() → Mengambil dataset harga rumah di California.\n",
+        "2. pd.DataFrame(housing.data, columns=housing.feature_names) → Mengubah data menjadi DataFrame dengan nama fitur.\n",
+        "3. df['MedHouseValue'] = pd.Series(housing.target) → Menambahkan kolom harga median rumah sebagai target (variabel dependen).\n",
+        "4. targets = df['MedHouseValue'] → Menyimpan variabel target (harga rumah).\n",
+        "5. inputs = df.drop(['MedHouseValue'], axis=1) → Menyimpan variabel independen (fitur rumah).\n",
+        "6. df.head() → Menampilkan 5 data teratas untuk melihat struktur dataset."
+      ],
+      "metadata": {
+        "id": "EbfbJoU0Pf5K"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# df.describe()\n",
@@ -415,7 +445,7 @@
         "id": "GrbKck3BWSX-",
         "outputId": "e575c2a9-818c-4163-9a2e-0e73593912eb"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -425,6 +455,26 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1. df.shape → Mengembalikan jumlah baris dan kolom dalam dataset.\n",
+        "2. Dicetak dalam format teks untuk memberikan informasi yang jelas.\n",
+        "3. Komentar df.describe() & df.info() menunjukkan bahwa analisis statistik dan informasi dataset bisa dilakukan tetapi tidak dijalankan di sini."
+      ],
+      "metadata": {
+        "id": "IMFQREipPuuq"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Bagi dataset menjadi data training (70%) dan data testing (30%)"
+      ],
+      "metadata": {
+        "id": "2UmsmrsYGEbT"
+      }
     },
     {
       "cell_type": "code",
@@ -440,7 +490,7 @@
         "id": "mNA1qEyXY23b",
         "outputId": "39abaa0e-4b73-46c8-8cfe-9090d7b4d3de"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -451,6 +501,32 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1. train_test_split(inputs, targets, test_size=0.3, random_state=1)\n",
+        "\n",
+        "\n",
+        "*   70% data digunakan untuk training (X_train, y_train).\n",
+        "*   30% data digunakan untuk testing (X_test, y_test).\n",
+        "*   random_state=1 memastikan pembagian data tetap sama setiap kali dijalankan.\n",
+        "\n",
+        "2. print(X_train.shape, X_test.shape) → Menampilkan jumlah baris dan kolom pada data training & testing untuk fitur.\n",
+        "3. print(y_train.shape, y_test.shape) → Menampilkan jumlah baris pada target training & testing."
+      ],
+      "metadata": {
+        "id": "lsCACBmcP5RV"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Lakukan data prepocesing pada data training dan testing dengan mentransformasi semua fitur agar nilainya berada pada selang[0,1]"
+      ],
+      "metadata": {
+        "id": "oBo4Mzi9GQNN"
+      }
     },
     {
       "cell_type": "code",
@@ -467,7 +543,7 @@
         "id": "m57-B01xZgys",
         "outputId": "956dbbd3-e1cd-4eec-9f5c-311f8dc9a594"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -491,6 +567,27 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "1. MinMaxScaler() → Membuat objek scaler untuk normalisasi.\n",
+        "2. scaler.fit_transform(X_train) → Menyesuaikan scaler dengan data training dan mentransformasikan nilainya ke skala 0-1.\n",
+        "3. scaler.transform(X_test) → Menggunakan scaler yang sama untuk menormalisasi data testing (tanpa fitting ulang).\n",
+        "4. print(X_test) → Menampilkan hasil transformasi data testing."
+      ],
+      "metadata": {
+        "id": "5DITPOT5QSPb"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Latih model regresi linier menggunakan semua fitur di data training yang sudah diskalakan. Kemudian tampilkan nilai intercept dan slope variabelnya"
+      ],
+      "metadata": {
+        "id": "g2iGFpYMGn6v"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "lr_model = LinearRegression()\n",
@@ -504,7 +601,7 @@
         "id": "NmZBTbdGaHah",
         "outputId": "ab917d10-100b-4127-ae5b-b1600eae7e2e"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -937,6 +1034,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "1. LinearRegression() → Membuat model regresi linier.\n",
+        "2. lr_model.fit(X_train, y_train) → Melatih model menggunakan data training (X_train) untuk mempelajari hubungan antara fitur rumah dan harga rumah (y_train)."
+      ],
+      "metadata": {
+        "id": "tFefKPE0Qbo3"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "print(f'intercept: {lr_model.intercept_}')\n",
@@ -949,7 +1056,7 @@
         "id": "HjQN9m4YaXzu",
         "outputId": "351d5935-81de-454b-cc5d-b45e46420a43"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -961,6 +1068,25 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1. lr_model.intercept_ → Nilai intercept (b) dalam persamaan regresi (nilai harga rumah saat semua fitur bernilai nol).\n",
+        "2. lr_model.coef_ → Array yang berisi koefisien regresi (m) untuk setiap fitur (kemiringan garis regresi)."
+      ],
+      "metadata": {
+        "id": "3EuSi_uMQfx0"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Evaluasi model yang telah dilatih menggunakan data testing dengan menghitung MSE dan R2 serta plot hubungan antara target output dan hasil prediksinya"
+      ],
+      "metadata": {
+        "id": "3wJMY6NoG92y"
+      }
     },
     {
       "cell_type": "code",
@@ -978,7 +1104,7 @@
         "id": "Z71DqtmFbFa3",
         "outputId": "da6243de-8c6a-4dc6-8448-1aef7b5d1ed2"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -989,6 +1115,18 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1. lr_model.predict(X_test) → Menggunakan model untuk memprediksi harga rumah berdasarkan data uji (X_test).\n",
+        "2. mean_squared_error(y_test, y_pred) → Menghitung Mean Squared Error (MSE), yaitu rata-rata kuadrat selisih antara nilai aktual (y_test) dan prediksi (y_pred).\n",
+        "3. lr_model.score(X_test, y_test) → Menghitung R² Score, yaitu seberapa baik model menjelaskan variasi dalam data (mendekati 1 berarti lebih akurat).\n",
+        "4. print(f'MSE: {mse}') & print(f'R2: {r2}') → Menampilkan hasil evaluasi."
+      ],
+      "metadata": {
+        "id": "W6Cg2wuoQ1C-"
+      }
     },
     {
       "cell_type": "code",
@@ -1007,7 +1145,7 @@
         "id": "CGB7YWRRbQ4v",
         "outputId": "7573c219-97f9-4140-9b64-ca7b87393751"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1020,6 +1158,18 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1. plt.scatter(y_test, y_pred, color='lavender') → Membuat plot titik-titik dengan sumbu X = nilai aktual dan Y = nilai prediksi.\n",
+        "2. plt.xlabel('Actual Values') & plt.ylabel('Predicted Values') → Memberi label pada sumbu X dan Y.\n",
+        "3. plt.title('Actual vs. Predicted Values') → Memberi judul grafik.\n",
+        "4. plt.show() → Menampilkan plot."
+      ],
+      "metadata": {
+        "id": "MLC0uto8RFh2"
+      }
     }
   ]
 }
